tests/errors/defined_on_unknown_struct.b
Foo :: bar(self) {
}

fn main() {
}
